# desafio_tecnico_4intelligence

./: .flake8  .hgignore  Dockerfile  Makefile  README.rst  docker-compose.yml  especificacao.rst  pyproject.toml
app/: config.py  models.py  resources.py  utils.py
app/models/: user.py
app/routers/: user.py
tests/: conftest.py  test_models.py  test_schemas.py  test_user.py
tests/routers/: test_user.py
