[tool.poetry]
name = "4intelligence"
version = "0.1.0"
description = ""
authors = ["André Felipe Dias <andref.dias@gmail.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "*"
loguru = "*"
Hypercorn = "*"
uvloop = "*"
orjson = "*"
databases = "*"
asyncpg = "*"
passlib = { extras = ["argon2"], version = "*" }
alembic = "*"


[tool.poetry.dev-dependencies]
alt-pytest-asyncio = "*"
asgi-lifespan = "*"
blue = "*"
flake8 = "*"
flake8-debugger = "*"
flake8-pytest-style = "*"
flake8-rst = "*"
httpx = "*"
isort = "*"
mypy = "*"
pep8-naming = "*"
pytest = "*"
pytest-faker = "^2.0.0"
pytest-cov = "^2.12.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 82

[tool.blue]
line-length = 82
